Enforce Set.of instead of Collections.emptySet