@@ -110,7 +110,7 @@ public abstract class AbstractSpatialFieldType<T extends SpatialStrategy> extend
   protected final Set<String> supportedScoreModes;
 
   protected AbstractSpatialFieldType() {
-    this(Collections.emptySet());
+    this(Set.of());
   }
 
   protected AbstractSpatialFieldType(Set<String> moreScoreModes) {
